Add comments describing USWDS stylesheets

--- a/src/registrar/assets/sass/_theme/styles.scss
+++ b/src/registrar/assets/sass/_theme/styles.scss
@@ -1,3 +1,11 @@
+/*--------------------------------------------------
+--- USWDS Settings --------------------------------*/
 @forward "uswds-theme";
+
+/*--------------------------------------------------
+--- USWDS Source ----------------------------------*/
 @forward "uswds";
+
+/*--------------------------------------------------
+--- Custom Styles ---------------------------------*/
 @forward "uswds-theme-custom-styles";
