Add /whoami view for logged-in user

--- a/src/registrar/templates/whoami.html
+++ b/src/registrar/templates/whoami.html
@@ -2,17 +2,8 @@
 {% extends 'base.html' %}
 
 {% block title %} Hello {% endblock %}
-{% block hero %}
-  <section class="usa-hero">
-    <div class="usa-grid">
-      <div class="usa-hero-callout usa-section-dark">
-        <h2>
-          <span class="usa-hero-callout-alt">This is sample content.</span>
-          This is only sample content.
-        </h2>
-        <p> {{ name }} You'll want to replace it with content of your own.</p>
-				<button class="usa-button usa-button--accent-cool">Click a usa button</button>
-      </div>
-    </div>
-  </section>
+{% block content %}
+<p> Hello {{ user.last_name|default:"No last name given" }}, {{ user.first_name|default:"No first name given" }} &lt;{{ user.email }}&gt;!  </p>
+
+<p><a href="/openid/logout">Click here to log out</a></p>        
 {% endblock %}
