Tweak settings for new branch

--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -132,7 +132,7 @@
             {% if user.is_authenticated %}
             User: <a href="/whoami">{{ user.get_username }}</a>
             {% else %}
-            <a href="/openid/openid/login">Sign in</a>
+            <a href="/openid/login">Sign in</a>
             {% endif %}
           </li>
         </ul>
