Redirect admin login to Login.gov

--- a/src/registrar/templates/401.html
+++ b/src/registrar/templates/401.html
@@ -12,7 +12,7 @@
 <p>{% translate "Authorization failed." %}</p>
 {% endif %}
 
-<p><a href="{% url 'openid' %}">
+<p><a href="{% url 'login' %}">
     {% translate "Would you like to try logging in again?" %}
 </a></p>
 
