Slightly better column layout

--- a/src/registrar/templates/application_requirements.html
+++ b/src/registrar/templates/application_requirements.html
@@ -1,11 +1,9 @@
 <!-- Test page -->
-{% extends 'base.html' %}
+{% extends 'application_form.html' %}
 
 {% block title %}Apply for a .gov domain - Requirements{% endblock %}
-{% block content %}
 
-{% include 'application_sidebar.html' %}
-
+{% block form_content %}
 <h1>Requirements</h1>
 
 <p>In order to request and register a .gov domain: </p>
