--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -158,7 +158,7 @@
 
     {% block section_nav %}{% endblock %}
 
-    <main id="main-content">
+    <main id="main-content" class="grid-container">
       {% block hero %}{% endblock %}
       {% block content %}{% endblock %}
     </main>
