--- a/src/registrar/templates/application_organization.html
+++ b/src/registrar/templates/application_organization.html
@@ -1,11 +1,9 @@
 <!-- Test page -->
-{% extends 'base.html' %}
+{% extends 'application_form.html' %}
 
-{% block title %}Apply for a .gov domain - Requirements{% endblock %}
-{% block content %}
+{% block title %}Apply for a .gov domain - About your organization{% endblock %}
 
-{% include 'application_sidebar.html' %}
-
+{% block form_content %}
 <h1>About your organization</h1>
 
 <h2> What kind of government organization do you represent?</h2>
