Fix nav bar USWDS class

--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -123,7 +123,7 @@
         <button class="usa-menu-btn">Menu</button>
       </div>
       {% block usa_nav %}
-      <nav>
+      <nav class="usa-nav">
         <button type="button" class="usa-nav__close">
           <img src="/public/img/usa-icons/close.svg" role="img" alt="Close" />
         </button>
