Review feedback: unit tests, accessibility, etc.

--- a/src/registrar/templates/application_organization.html
+++ b/src/registrar/templates/application_organization.html
@@ -19,7 +19,7 @@
   {{ wizard.form.organization_type|add_class:"usa-radio" }}
 
   </fieldset>
-  <button name="wizard_goto_step" type="submit" class="usa-button" value="{{ wizard.steps.next }}">Next</button>
+  <button type="submit" class="usa-button">Next</button>
 
 </form>
 {% endblock %}
