--- a/src/registrar/templates/application_contact.html
+++ b/src/registrar/templates/application_contact.html
@@ -9,7 +9,7 @@
 
 <h2>What is the name and mailing address of your organization?</h2>
 
-<p>Enter the name of the organization your represent. Your organization might be part
+<p id="instructions">Enter the name of the organization your represent. Your organization might be part
 of a larger entity. If so, enter information about your part of the larger entity.</p>
 
 <p>All fields are required unless they are marked optional.</p>
@@ -19,7 +19,7 @@ of a larger entity. If so, enter information about your part of the larger entit
   {% csrf_token %}
 
   {{ wizard.form.organization_name|add_label_class:"usa-label" }}
-  {{ wizard.form.organization_name|add_class:"usa-input" }}
+  {{ wizard.form.organization_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
 
   <fieldset class="usa-fieldset">
     {{ wizard.form.street_address|add_label_class:"usa-label" }}
@@ -29,7 +29,7 @@ of a larger entity. If so, enter information about your part of the larger entit
   {% if wizard.steps.prev %}
     <button name="wizard_goto_step" type="submit" class="usa-button usa-button--base" value="{{ wizard.steps.prev }}">Previous</button>
   {% endif %}
-  <button name="wizard_goto_step" type="submit" class="usa-button" value="{{ wizard.steps.next }}">Next</button>
+  <button type="submit" class="usa-button">Submit</button>
 </form>
 
 {% endblock %}
