--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -23,6 +23,7 @@
   {% block css %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <script src="{% static 'js/uswds-init.min.js' %}" defer></script>
+  <script src="{% static 'js/get-gov.js' %}" defer></script>
   {% endblock %}
 
   {% block canonical %}
