review feedback: too many commas

--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -106,7 +106,7 @@
   {% if IS_DEMO_SITE %}
     <section
     class="usa-site-alert usa-site-alert--emergency usa-site-alert--no-icon"
-    aria-label="Site alert,,,,,"
+    aria-label="Site alert"
     >
       <div class="usa-alert">
         <div class="usa-alert__body">
