--- a/src/registrar/templates/application_contact.html
+++ b/src/registrar/templates/application_contact.html
@@ -23,7 +23,7 @@ of a larger entity. If so, enter information about your part of the larger entit
 
   <fieldset class="usa-fieldset">
     {{ wizard.form.street_address|add_label_class:"usa-label" }}
-    {{ wizard.form.street_address|add_class:"usa-input" }}
+    {{ wizard.form.street_address|add_class:"usa-input"|attr:"validate:domain" }}
   </fieldset>
 
   {% if wizard.steps.prev %}
