--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -1,13 +1,26 @@
 {% extends 'base.html' %}
+{% load static widget_tweaks %} 
 
+{% block title %}Apply for a .gov domain – {{form_titles|get_item:wizard.steps.current}}{% endblock %}
 {% block content %}
 <div class="grid-row">
   <div class="grid-col-3">
     {% include 'application_sidebar.html' %}
   </div>
-
   <div class="grid-col-9">
-    {% block form_content %}{% endblock %}
+    {% block backnav %}
+      {% if wizard.steps.prev %}
+      <button form={{form_name}} name="wizard_goto_step" type="submit" class="usa-button usa-button--unstyled" value="{{ wizard.steps.prev }}">
+        <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
+          <use xlink:href="{%static '/img/sprite.svg'%}#arrow_back"></use>
+        </svg><span class="margin-left-05">Previous step </span>
+      </button>
+      {% endif %}
+    {% endblock %}
+    {% block form_content %}
+     <button type="submit" class="usa-button">Next</button>
+     <button type="button" class="usa-button usa-button--outline">Save</button>
+    {% endblock %}
   </div>
 </div>
 {% endblock %}
