--- a/src/registrar/templates/application_purpose.html
+++ b/src/registrar/templates/application_purpose.html
@@ -18,11 +18,10 @@
    
     <div class="usa-character-count">
       {{ wizard.form.purpose_field|add_label_class:"usa-label" }}
-      {{ wizard.form.purpose_field}}
+      {{ wizard.form.purpose_field|add_class:"usa-textarea usa-character-count__field"|attr:"aria-describedby:instructions"|attr:"maxlength=500" }}
       <span class="usa-character-count__message" id="with-hint-textarea-info with-hint-textarea-hint"> You can enter up to 500 characters </span>
     </div>
 
-    <!-- {{ wizard.form.purpose_field|add_class:"usa-textarea usa-character-count__field"|attr:"aria-describedby:instructions"|attr:"maxlength=50" }} -->
   </div>
 
   {% if wizard.steps.prev %}
