Add your contact view, rename org contact

--- a/src/registrar/templates/application_purpose.html
+++ b/src/registrar/templates/application_purpose.html
@@ -21,6 +21,9 @@
       <span class="usa-character-count__message" id="with-hint-textarea-info with-hint-textarea-hint"> You can enter up to 500 characters </span>
     </div>
   </div>
+
+  {{ block.super }}
+
 </form>
 
 {% endblock %}
