--- a/src/registrar/templates/application_org_contact.html
+++ b/src/registrar/templates/application_org_contact.html
@@ -30,7 +30,9 @@ of a larger entity. If so, enter information about your part of the larger entit
     {{ wizard.form.address_line2|add_label_class:"usa-label" }}
     {{ wizard.form.address_line2|add_class:"usa-input" }}
     {{ wizard.form.us_state|add_label_class:"usa-label" }}
-    {{ wizard.form.us_state|add_class:"usa-input" }}
+    <div class="usa-combo-box">
+      {{ wizard.form.us_state|add_class:"usa-select" }}
+    </div>
     {{ wizard.form.zipcode|add_label_class:"usa-label" }}
     {{ wizard.form.zipcode|add_class:"usa-input" }}
 
