Add other contacts view

--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -10,7 +10,7 @@
   <div class="grid-col-9">
     {% block backnav %}
       {% if wizard.steps.prev %}
-      <button form={{form_name}} name="wizard_goto_step" type="submit" class="usa-button usa-button--unstyled" value="{{ wizard.steps.prev }}">
+      <button form="step__{{wizard.steps.current}}" name="wizard_goto_step" type="submit" class="usa-button usa-button--unstyled" value="{{ wizard.steps.prev }}">
         <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
           <use xlink:href="{%static '/img/sprite.svg'%}#arrow_back"></use>
         </svg><span class="margin-left-05">Previous step </span>
