--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -2,12 +2,6 @@
 {% extends 'application_form.html' %}
 {% load widget_tweaks static%}
 
-{% block backnav %}
-  {% with form_name="step__dotgov-domain" %}
-    {{ block.super }}
-  {% endwith %}
-{% endblock %}
-
 {% block form_content %}
   <p> Before requesting a .gov domain, <a href="#">please make sure it meets our naming requirements.</a> Your domain name must:
   <ul class="usa-list">
@@ -40,7 +34,7 @@
   </ul>
   </p>
 
-<form id="step__dotgov-domain" class="usa-form usa-form--large" method="post">
+<form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post">
   <h2> What .gov domain do you want? </h2>
   <p class="domain_instructions"> After you enter your domain, we’ll make sure it’s available and that it meets some of our naming requirements. If your domain passes these initial checks, we’ll verify that it meets all of our requirements once you complete and submit the rest of the domain request form. </p>
 
