--- a/src/registrar/templates/application_organization.html
+++ b/src/registrar/templates/application_organization.html
@@ -3,15 +3,9 @@
 {% load widget_tweaks %}
 {% load dynamic_question_tags %}
 
-{% block backnav %}
-  {% with form_name="step__about-org" %}
-    {{ block.super }}
-  {% endwith %}
-{% endblock %}
-
 {% block form_content %}
 
-<form id="step__about-org" class="usa-form usa-form--large" method="post">
+<form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post">
   {{ wizard.management_form }}
   {% csrf_token %}
 
