Make phone and zip input fields smaller

--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -33,7 +33,7 @@
     {{ wizard.form.email|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
 
     {{ wizard.form.phone|add_label_class:"usa-label" }}
-    {{ wizard.form.phone|add_class:"usa-input usa-input"|attr:"aria-describedby:instructions" }}
+    {{ wizard.form.phone|add_class:"usa-input usa-input--medium"|attr:"aria-describedby:instructions" }}
   </fieldset>
 
 
