--- a/src/registrar/templates/application_org_contact.html
+++ b/src/registrar/templates/application_org_contact.html
@@ -28,7 +28,7 @@ of a larger entity. If so, enter information about your part of the larger entit
       {{ wizard.form.us_state|add_class:"usa-select" }}
     </div>
     {{ wizard.form.zipcode|add_label_class:"usa-label" }}
-    {{ wizard.form.zipcode|add_class:"usa-input" }}
+    {{ wizard.form.zipcode|add_class:"usa-input usa-input--small" }}
 
   </fieldset>
 
