Change next button to submit on last page

--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -17,8 +17,13 @@
     {% endif %}
     <h1> {{form_titles|get_item:wizard.steps.current}} </h1>
     {% block form_content %}
-     <button type="submit" class="usa-button">Next</button>
-     <button type="button" class="usa-button usa-button--outline">Save</button>
+      {% if wizard.steps.next %}
+       <button type="submit" class="usa-button">Next</button>
+       <button type="button" class="usa-button usa-button--outline">Save</button>
+      {% else %}
+       <button type="submit" class="usa-button">Submit</button>
+       <button type="button" class="usa-button usa-button--outline">Save</button>
+      {% endif %}
     {% endblock %}
   </div>
 </div>
