--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -9,21 +9,20 @@
   </div>
   <div class="grid-col-9">
     {% if wizard.steps.prev %}
-    <button form="step__{{wizard.steps.current}}" name="wizard_goto_step" type="submit" class="usa-button usa-button--unstyled" value="{{ wizard.steps.prev }}">
+    <a href="{% url wizard.url_name step=wizard.steps.prev %}">
       <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
         <use xlink:href="{%static '/img/sprite.svg'%}#arrow_back"></use>
       </svg><span class="margin-left-05">Previous step </span>
-    </button>
+    </a>
     {% endif %}
     <h1> {{form_titles|get_item:wizard.steps.current}} </h1>
     {% block form_content %}
       {% if wizard.steps.next %}
-       <button type="submit" class="usa-button">Next</button>
-       <button type="button" class="usa-button usa-button--outline">Save</button>
+        <button type="submit" class="usa-button">Next</button>
       {% else %}
-       <button type="submit" class="usa-button">Submit your domain request</button>
-       <button type="button" class="usa-button usa-button--outline">Save</button>
+        <button type="submit" class="usa-button">Submit your domain request</button>
       {% endif %}
+      <button type="button" class="usa-button usa-button--outline">Save</button>
     {% endblock %}
   </div>
 </div>
