--- a/src/registrar/templates/includes/radio_button.html
+++ b/src/registrar/templates/includes/radio_button.html
@@ -1,14 +1,14 @@
-<div>
-  <label for="{{ choice.id_for_label }}"
-    ><input
+<div class="usa-radio">
+  <input
     type="{{ choice.data.type }}"
     name="{{ choice.data.name }}"
     value="{{ choice.data.value }}"
-    class="usa-radio"
+    class="usa-radio__input {% if tile %}usa-radio__input--tile {%endif%}"
     id="{{ choice.id_for_label }}"
     {% if choice.data.attrs.required %}required{% endif %}
     {% if choice.data.selected %}checked{% endif %}
     />
-    {{ choice.data.label }}</label
-  >
+    <label class="usa-radio__label" for="{{ choice.id_for_label }}" >
+      {{ choice.data.label }}
+    </label >
 </div>
