--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -3,7 +3,7 @@
 
 {% block title %}Apply for a .gov domain – {{form_titles|get_item:wizard.steps.current}}{% endblock %}
 {% block content %}
-<div class="grid-row">
+<div class="grid-row grid-gap">
   <div class="grid-col-3">
     {% include 'application_sidebar.html' %}
   </div>
