--- a/src/registrar/templates/application_sidebar.html
+++ b/src/registrar/templates/application_sidebar.html
@@ -1,4 +1,4 @@
-<div class="tablet:grid-col-4 margin-bottom-4 tablet:margin-bottom-0">
+<div class="margin-bottom-4 tablet:margin-bottom-0">
   <nav aria-label="Form steps,">
     <ul class="usa-sidenav">
     {% for this_step in wizard.steps.all %}
