--- a/src/registrar/templates/application_org_contact.html
+++ b/src/registrar/templates/application_org_contact.html
@@ -6,10 +6,14 @@
 
 <h2>What is the name and mailing address of your organization?</h2>
 
-<p id="instructions">Enter the name of the organization your represent. Your organization might be part
-of a larger entity. If so, enter information about your part of the larger entity.</p>
+<div id="instructions">
+  <p>Enter the name of the organization your represent. Your organization might be part
+  of a larger entity. If so, enter information about your part of the larger entity.</p>
 
-<p>All fields are required unless they are marked optional.</p>
+  <p>Once your domain is approved, the name of your organization will be publicly listed as the domain registrant. </p>
+
+  <p>All fields are required unless they are marked optional.</p>
+</div>
 
 <form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post">
   {{ wizard.management_form }}
