--- a/src/registrar/templates/application_purpose.html
+++ b/src/registrar/templates/application_purpose.html
@@ -4,9 +4,7 @@
 
 {% block form_content %}
 
-<p id="instructions">Explain how you plan to use this domain. Will you use it for a website and/or email? Are you moving your website from another top-level domain (like .com or .org)?Read about <a href="#">activities that are prohibited on .gov domains.</a></p>
-
-<p>All fields are required unless they are marked optional.</p>
+<p id="instructions">Describe your organization’s mission or the reason for your domain request. Explain how you plan to use this domain. Will you use it for a website and/or email? Are you moving your website from another top-level domain (like .com or .org)? Read about <a href="#">activities that are prohibited on .gov domains.</a></p>
 
 <form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post">
   <div class="usa-form-group">
