--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -7,8 +7,16 @@
 
 <h2>Who is the authorizing official for your organization</h2>
 
-<p id="instructions">Your authorizing official is the person within your organization who can authorize your domain request. This is generally the highest ranking or highest elected official in your organization. Read more about <a href="#">who can serve as an authorizing official</a>.
-</p>
+<div id="instructions">
+  <p>Your authorizing official is the person within your organization who can authorize your domain request. This is generally the highest ranking or highest elected official in your organization. Read more about <a href="#">who can serve as an authorizing official</a>.
+  </p>
+
+  <div class="ao-example">
+    <p>Domain requests from <strong>cities</strong> must be authorized by the mayor or the equivalent highest elected official.</p>
+  </div>
+
+  <p>We’ll contact your authorizing official to let them know that you made this request and to double check that they approve it.</p> 
+</div>
 
 <p>All fields are required unless they are marked optional.</p>
 
